# BoardroomAI

./: .env.example  .gitignore  README.md  docker-compose.yml  start.ps1  stop.ps1
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_boardroom_schema.py  0002_live_boardroom_streaming.py  0003_meeting_favorites.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/domain/boardroom/: __init__.py  assessment.py  export.py  ideas.py  memory.py  models.py  orchestrator.py  provider.py  report.py  roles.py  streaming.py
backend/app/infrastructure/ai/: local_provider.py
backend/app/infrastructure/database/: base.py  models.py  repositories.py  session.py
backend/app/schemas/: boardroom.py
backend/tests/: test_api_contracts.py  test_boardroom_orchestrator.py  test_ideas_and_exports.py  test_live_boardroom_stream.py
docs/: API.md  ARCHITECTURE.md
frontend/: Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/meeting/: page.tsx
frontend/components/boardroom/: boardroom-app.tsx
frontend/components/ui/: button.tsx  input.tsx  textarea.tsx
frontend/lib/: api.ts  types.ts
frontend/store/: use-boardroom-store.ts
infra/: README.md
scripts/: dev.ps1  test-backend.ps1
