[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boardroom-ai-backend"
version = "0.1.0"
description = "FastAPI backend and executive board orchestration for Boardroom AI."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.13.4,<2.14",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "alembic>=1.13,<2.0",
  "redis>=5.0,<6.0",
  "qdrant-client>=1.11,<2.0",
  "httpx>=0.27,<1.0",
  "structlog>=24.2,<25.0",
  "langgraph>=0.2,<1.0",
  "openai>=1.40,<2.0",
  "anthropic>=0.34,<1.0",
  "google-genai>=0.3,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
